[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Login.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cenario/cenas/cena1.png" type="Texture" id=2]
[ext_resource path="res://Audios/TrilhaOtherside.wav" type="AudioStream" id=3]
[ext_resource path="res://Cenas/VoltarButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/cenario/cenas/tituloLogin.png" type="Texture" id=5]

[node name="Login" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ImgFundo" type="Sprite" parent="." index="1"]

position = Vector2( 801.137, 245.242 )
scale = Vector2( 0.889415, 0.835787 )
texture = ExtResource( 2 )

[node name="NomeTextEdit" type="TextEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 581.0
margin_top = 310.0
margin_right = 719.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true

[node name="IdadeTextEdit" type="TextEdit" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 580.0
margin_top = 340.0
margin_right = 641.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Caret" ]

[node name="NomeLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 312.0
margin_right = 563.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Usu√°rio:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="IdadeLabel" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 522.0
margin_top = 339.0
margin_right = 562.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Idade:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Trilha" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Mensagem1" type="Label" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 528.0
margin_top = 416.0
margin_right = 735.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Informe sua idade corretamente"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="JogarButton" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 650.0
margin_top = 340.0
margin_right = 719.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Jogar"
flat = false
align = 1

[node name="RodapeVoltar" type="CenterContainer" parent="." index="9"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -388.0
margin_top = -244.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VoltarButton" parent="RodapeVoltar" index="0" instance=ExtResource( 4 )]

margin_left = 169.0
margin_top = 112.0
margin_right = 218.0
margin_bottom = 132.0

[node name="TituloCenterContainer" type="CenterContainer" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="loginTexto" type="Sprite" parent="TituloCenterContainer" index="0"]

position = Vector2( 277.016, 107.171 )
scale = Vector2( 0.530993, 0.530993 )
texture = ExtResource( 5 )

[connection signal="focus_exited" from="NomeTextEdit" to="." method="_on_NomeTextEdit_focus_exited"]

[connection signal="pressed" from="JogarButton" to="." method="_on_JogarButton_pressed"]

[connection signal="pressed" from="RodapeVoltar/VoltarButton" to="." method="_on_VoltarButton_pressed"]


